tests/snapshots/run_wpt_conformance__litert_sin_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float16 3D tensor",
    "litert",
    "PASS",
)
