tests/snapshots/run_wpt_conformance__litert_sin_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float16 4D tensor",
    "litert",
    "PASS",
)
