tests/snapshots/run_wpt_conformance__litert_sin_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sin.https.any.js",
    "sin float32 3D tensor",
    "litert",
    "PASS",
)
