tests/snapshots/run_wpt_conformance__litert_slice_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "slice.https.any.js",
    "slice float16 1D constant tensor",
    "litert",
    "PASS",
)
